--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,27 @@
   font-family: 'Quicksand', sans-serif;
 }
 
+.table{
+  data-max:30px;
+  data-min:10px;
+}
+
+.image {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.image img {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -78,13 +99,17 @@
 
 #MMM {
   font-family: 'Quicksand', sans-serif;
-  max-width:450px;
+  max-width:560px;
   font-size:1.2vmax;
 }
 
 
 h1 {
   font-size:4.5vw;
+}
+
+h2 {
+  font-size:2vmax;
 }
 
   a.button{
